--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
 
   <body>
     <header class="bg-green-700">
-      <%= image_tag 'logo.svg', alt: 'The Pragmatic Bookshelf', class: 'h-50 w-50' %>
+      <%= image_tag 'logo.svg', alt: 'The Pragmatic Bookshelf' %>
       <h1><%= @page_title %></h1>
     </header>
 
